// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plp components - CategoryQuickLinksContainer 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  padding-left: 1rem;
  margin-bottom: 50px;
}

@media (min-width:768px) {
  .c0 {
    padding-left: 2rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding-right: 2rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Plp components - ProductsGridContainer 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.875rem;
}

@media (min-width:768px) {
  .c0 {
    padding-left: 2rem;
    padding-right: 2rem;
    padding-top: 1.375rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding-top: 1.625rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
    padding-top: 1.625rem;
  }
}

<div
    class="c0"
  >
    Test
  </div>
</DocumentFragment>
`;
